--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "css-loader": "^0.28.11",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
     "sass-loader": "^7.0.2",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.0"
+  },
+  "dependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   }
 }
