--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Codenames (Board Game)",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack -d --watch",
+    "debug": "webpack -d --watch",
     "build": "webpack",
     "test": "webpack"
   },
@@ -27,18 +27,18 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.2",
-    "webpack": "^4.10.2",
-    "webpack-cli": "^3.0.0"
+    "mini-css-extract-plugin": "^0.4.5",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.6"
   },
   "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
