--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
+    "events": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
